# bytebuf

./: .gitignore  README.md  meson.build
include/: bytebuf.h
src/: bytebuf.c
tests/: test_basic_operations.c  test_bytebuf.c  test_compositebytebuf.c
